sumo/tests/traci/VariableRetrieval/Edge/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:27:00 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=170 varID=255 objID=dummy
.. Answered with error to command (170), [description: Get Edge Variable: unsupported variable specified]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
